[package]
name = "polygon-arb-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }           
ethers = "1"                                           
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls"] }  
dotenv = "0.15"                                          
anyhow = "1"                                             
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.42"

